karnc/tests/fixtures/negative/117_queue_invalid_name/src/svc.karn
context svc

service worker from queue("") {
  on message(message: String) -> Effect[QueueResult] {
    Ack
  }
}
